--- a/compare_labels.ipynb
+++ b/compare_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "01ee3266",
    "metadata": {},
    "outputs": [],
@@ -12,40 +12,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "7bab0f5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = pd.read_csv('./dev_phase/subtask1/dev/arb.csv')\n",
-    "bert_based_uncased = pd.read_csv('./results/ar_bert_based_uncased.csv')\n",
+    "# lang = \"eng\"\n",
+    "# labels = pd.read_csv(f'./dev_phase/subtask1/dev/{lang}.csv')\n",
+    "# bert_based_uncased = pd.read_csv(f'./results/{lang}_bert_based_uncased.csv')\n",
     "MARBERTv2 = pd.read_csv('./results/ar_MARBERTv2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "id": "29cf483f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MARBERTv2 = MARBERTv2.drop(columns=[' probs'])\n",
+    "MARBERTv2.to_csv(\"pred_arb222.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4e406470",
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge all of them based on id\n",
     "bert_based_uncased = bert_based_uncased.rename(columns={\"polarization\": \"bert_base_label\"})\n",
-    "MARBERTv2 = MARBERTv2.rename(columns={\"polarization\": \"marbert_label\"})\n",
+    "# MARBERTv2 = MARBERTv2.rename(columns={\"polarization\": \"marbert_label\"})\n",
     "merged_df = pd.merge(labels, bert_based_uncased, on='id', how='left')\n",
-    "merged_df = pd.merge(merged_df, MARBERTv2, on='id', how='left')\n",
+    "# merged_df = pd.merge(merged_df, MARBERTv2, on='id', how='left')\n",
     "# Save it into combined labels .csv\n",
-    "merged_df.to_csv('./results/combined_labels.csv', index=False)\n"
+    "merged_df.to_csv(f'./results/{lang}_combined_labels.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dba5bcee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'polarization', ' probs'], dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bert_based_uncased[\"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "7c712bd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddd"
+    "# drop probs column from bert_based_uncased and save it as eng_arb.csv\n",
+    "bert_based_uncased.drop(columns=[' probs'], inplace=True)\n",
+    "bert_based_uncased.to_csv(f'./results/{lang}_arb.csv', index=False)\n"
    ]
   }
  ],
