--- a/starter_ar.ipynb
+++ b/starter_ar.ipynb
@@ -47,7 +47,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1Cvdkk_AZQzM5rJYhV4Nq-8bXvJrF8t4z\n",
             "To: /content/dev_phase.zip\n",
-            "100% 10.1M/10.1M [00:00<00:00, 20.7MB/s]\n",
+            "100% 10.1M/10.1M [00:00<00:00, 20.8MB/s]\n",
             "Archive:  dev_phase.zip\n",
             "   creating: dev_phase/\n",
             "  inflating: __MACOSX/._dev_phase    \n",
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "5b8e9d6e-9342-43fd-9a0a-1330caf4e23a",
       "metadata": {
         "id": "5b8e9d6e-9342-43fd-9a0a-1330caf4e23a"
@@ -276,12 +276,10 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "from sklearn.metrics import recall_score, precision_score, f1_score\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
         "import numpy as np\n",
         "\n",
         "import torch\n",
-        "\n",
-        "from sklearn.metrics import f1_score\n",
         "\n",
         "from transformers import (\n",
         "    AutoTokenizer,\n",
@@ -680,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "21c97269",
       "metadata": {
         "id": "21c97269"
@@ -688,9 +686,17 @@
       "outputs": [],
       "source": [
         "# Define metrics function\n",
+        "# Primary Metric F1 MACRO SCORE\n",
         "def compute_metrics(p):\n",
         "    preds = np.argmax(p.predictions, axis=1)\n",
-        "    return {'f1_macro': f1_score(p.label_ids, preds, average='macro')}\n",
+        "    return {\n",
+        "        'f1_macro': f1_score(p.label_ids, preds, average='macro'),\n",
+        "        'accuracy': accuracy_score(p.label_ids, preds),\n",
+        "        'precision': precision_score(p.label_ids, preds, average='binary'),\n",
+        "        'recall': recall_score(p.label_ids, preds, average='binary'),\n",
+        "        'f1_binary': f1_score(p.label_ids, preds, average='binary'),\n",
+        "        'f1_micro': f1_score(p.label_ids, preds, average='micro')\n",
+        "    }\n",
         "\n",
         "# Define training arguments\n",
         "training_args = TrainingArguments(\n",
@@ -718,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "ecd9f444",
       "metadata": {
         "id": "ecd9f444"
@@ -813,7 +819,7 @@
         "\n",
         "# Evaluate the model on the validation set\n",
         "eval_results = trainer.evaluate()\n",
-        "print(f\"Macro F1 score on validation set: {eval_results['eval_f1_macro']}\")"
+        "print(f\"Validation Results:\\nAccuracy: {eval_results['eval_accuracy']:.4f}\\nPrecision: {eval_results['eval_precision']:.4f}\\nRecall: {eval_results['eval_recall']:.4f}\\nF1 (binary): {eval_results['eval_f1_binary']:.4f}\\nF1 (macro): {eval_results['eval_f1_macro']:.4f}\\nF1 (micro): {eval_results['eval_f1_micro']:.4f}\")"
       ]
     },
     {
@@ -1572,7 +1578,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
