--- a/MTL.ipynb
+++ b/MTL.ipynb
@@ -10,12 +10,35 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from tqdm.auto import tqdm"
+        "from tqdm.auto import tqdm\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from transformers import AutoModel\n",
+        "from logging import log"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 2,
+      "id": "2508329d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import wandb\n",
+        "\n",
+        "# Disable wandb logging for this script\n",
+        "wandb.init(mode=\"disabled\")\n",
+        "\n",
+        "# CONFIG\n",
+        "NUM_TYPES = 5\n",
+        "NUM_MANIFESTATIONS = 6\n",
+        "datasets_merge = True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "id": "6407ec79",
       "metadata": {},
       "outputs": [],
@@ -28,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "e844f3e6",
       "metadata": {},
       "outputs": [],
@@ -54,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "d4288712",
       "metadata": {},
       "outputs": [],
@@ -66,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "09f26488",
       "metadata": {},
       "outputs": [],
@@ -94,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 7,
       "id": "8900bea6",
       "metadata": {},
       "outputs": [],
@@ -121,100 +144,178 @@
         "    random_state=42\n",
         ")\n",
         "\n",
-        "# Apply the same split to all three datasets\n",
-        "for train in [train_1, train_2, train_3]:\n",
-        "    current_label_columns = get_label_columns(train)\n",
-        "    texts = train['text'].tolist()\n",
-        "    \n",
-        "    # Use the same indices for all datasets\n",
+        "if datasets_merge:\n",
+        "    # Merge all datasets on 'id'\n",
+        "    merged = train_1.merge(train_2, on=['id', 'text'], how='outer', suffixes=('_1', '_2'))\n",
+        "    # For the third, avoid duplicate columns of 'text', so drop redundant one, or merge only on id\n",
+        "    merged = merged.merge(train_3, on=['id', 'text'], how='outer', suffixes=('', '_3'))\n",
+        "    # Get label columns: all columns excluding 'id' and 'text'\n",
+        "    merged_label_columns = get_label_columns(merged)\n",
+        "    texts = merged['text'].tolist()\n",
+        "    labels = merged[merged_label_columns].values.tolist()\n",
         "    texts_train = [texts[i] for i in train_indices]\n",
         "    texts_val = [texts[i] for i in val_indices]\n",
-        "    \n",
-        "    if current_label_columns:\n",
-        "        labels = train[current_label_columns].values.tolist()\n",
-        "        labels_train = [labels[i] for i in train_indices]\n",
-        "        labels_val = [labels[i] for i in val_indices]\n",
-        "    else:\n",
-        "        labels_train = [[] for _ in texts_train]\n",
-        "        labels_val = [[] for _ in texts_val]\n",
-        "    \n",
-        "    train_datasets.append(PolarizationDataset(texts_train, labels_train, tokenizer))\n",
-        "    val_datasets.append(PolarizationDataset(texts_val, labels_val, tokenizer))"
+        "    labels_train = [labels[i] for i in train_indices]\n",
+        "    labels_val = [labels[i] for i in val_indices]\n",
+        "    train_dataset = PolarizationDataset(texts_train, labels_train, tokenizer)\n",
+        "    val_dataset = PolarizationDataset(texts_val, labels_val, tokenizer)\n",
+        "else:\n",
+        "    # Apply the same split to all three datasets\n",
+        "    for train in [train_1, train_2, train_3]:\n",
+        "        current_label_columns = get_label_columns(train)\n",
+        "        texts = train['text'].tolist()\n",
+        "        \n",
+        "        # Use the same indices for all datasets\n",
+        "        texts_train = [texts[i] for i in train_indices]\n",
+        "        texts_val = [texts[i] for i in val_indices]\n",
+        "        \n",
+        "        if current_label_columns:\n",
+        "            labels = train[current_label_columns].values.tolist()\n",
+        "            labels_train = [labels[i] for i in train_indices]\n",
+        "            labels_val = [labels[i] for i in val_indices]\n",
+        "        else:\n",
+        "            labels_train = [[] for _ in texts_train]\n",
+        "            labels_val = [[] for _ in texts_val]\n",
+        "        \n",
+        "        train_datasets.append(PolarizationDataset(texts_train, labels_train, tokenizer))\n",
+        "        val_datasets.append(PolarizationDataset(texts_val, labels_val, tokenizer))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
-      "id": "368599ff",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "12"
-            ]
-          },
-          "execution_count": 40,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(train_datasets[0].labels[0]) + len(train_datasets[1].labels[0]) + len(train_datasets[2].labels[0]) "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "500cca39",
       "metadata": {},
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "from transformers import AutoModel\n",
-        "\n",
         "class GatedMTLModel(nn.Module):\n",
         "    def __init__(self, model_name, num_types, num_manifestations):\n",
         "        super().__init__()\n",
         "        self.encoder = AutoModel.from_pretrained(model_name)\n",
         "        hidden_size = self.encoder.config.hidden_size\n",
-        "        \n",
-        "        # Subtask 1 head (binary, polarization)\n",
+        "\n",
         "        self.head1 = nn.Linear(hidden_size, 1)\n",
-        "        \n",
-        "        # Heads for Subtask 2 (type) and Subtask 3 (manifestation)\n",
         "        self.head2 = nn.Linear(hidden_size, num_types)\n",
         "        self.head3 = nn.Linear(hidden_size, num_manifestations)\n",
-        "        self.sigmoid = nn.Sigmoid()\n",
         "\n",
-        "    def forward(self, input_ids, attention_mask=None, token_type_ids=None):\n",
-        "        outputs = self.encoder(input_ids=input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids)\n",
-        "        \n",
-        "        # [CLS] representation (assumes huggingface transformers convention)\n",
-        "        H = outputs.last_hidden_state[:, 0, :]  # [batch, hidden]\n",
-        "        \n",
-        "        # Task 1 Binary Polarization head\n",
-        "        P_bin = self.sigmoid(self.head1(H))  # [batch, 1], probability in (0,1)\n",
-        "        \n",
-        "        # Soft gating: broadcast P_bin across hidden dim\n",
-        "        H_gated = H * P_bin\n",
-        "        \n",
-        "        # Downstream heads (multilabel)\n",
-        "        P_types = self.sigmoid(self.head2(H_gated))\n",
-        "        P_manifestations = self.sigmoid(self.head3(H_gated))\n",
-        "        \n",
+        "    def forward(self, input_ids, attention_mask=None, token_type_ids=None, labels=None):\n",
+        "        outputs = self.encoder(\n",
+        "            input_ids=input_ids,\n",
+        "            attention_mask=attention_mask,\n",
+        "            token_type_ids=token_type_ids,\n",
+        "        )\n",
+        "\n",
+        "        H = outputs.last_hidden_state[:, 0, :]  # [CLS]\n",
+        "\n",
+        "        logits1 = self.head1(H)  # [batch, 1]\n",
+        "\n",
+        "        gate = torch.sigmoid(logits1)\n",
+        "        H_gated = H * gate\n",
+        "\n",
+        "        logits2 = self.head2(H_gated)          # [batch, num_types]\n",
+        "        logits3 = self.head3(H_gated)          # [batch, num_manifestations]\n",
+        "\n",
+        "        logits = torch.cat([logits1, logits2, logits3], dim=-1)\n",
+        "\n",
+        "        loss = None\n",
+        "        if labels is not None:\n",
+        "            labels = labels.float()\n",
+        "            loss_fct = nn.BCEWithLogitsLoss()\n",
+        "            loss = loss_fct(logits, labels)\n",
+        "\n",
         "        return {\n",
-        "            \"polarization\": P_bin.squeeze(-1),\n",
-        "            \"types\": P_types,\n",
-        "            \"manifestations\": P_manifestations\n",
-        "        }\n",
-        "\n",
-        "# Example instantiation (define num_types and num_manifestations according to your dataset)\n",
-        "num_types = len(train_datasets[1].labels[0])  # e.g., 6\n",
-        "num_manifestations = len(train_datasets[2].labels[0])  # e.g., 5\n",
-        "model = GatedMTLModel(model_name, num_types, num_manifestations)"
+        "            \"loss\": loss,\n",
+        "            \"logits\": logits,\n",
+        "            \"polarization_logits\": logits1,\n",
+        "            \"types_logits\": logits2,\n",
+        "            \"manifestations_logits\": logits3,\n",
+        "        }"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "id": "902a37ff",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = GatedMTLModel(model_name, NUM_TYPES, NUM_MANIFESTATIONS)\n",
+        "\n",
+        "def compute_metrics(eval_pred):\n",
+        "    logits, labels = eval_pred\n",
+        "\n",
+        "    probs = 1 / (1 + np.exp(-logits))\n",
+        "    preds = (probs >= 0.5).astype(int)\n",
+        "    labels = labels.astype(int)\n",
+        "\n",
+        "    y1_true = labels[:, 0]\n",
+        "    y1_pred = preds[:, 0]\n",
+        "\n",
+        "    y2_true = labels[:, 1:1+NUM_TYPES]\n",
+        "    y2_pred = preds[:, 1:1+NUM_TYPES]\n",
+        "\n",
+        "    y3_true = labels[:, 1+NUM_TYPES:]\n",
+        "    y3_pred = preds[:, 1+NUM_TYPES:]\n",
+        "\n",
+        "    return {\n",
+        "        \"subtask_1/accuracy\": accuracy_score(y1_true, y1_pred),\n",
+        "        \"subtask_1/f1_binary\": f1_score(y1_true, y1_pred, average=\"binary\", zero_division=0),\n",
+        "        \"subtask_1/f1_macro\": f1_score(y1_true, y1_pred, average=\"macro\", zero_division=0),\n",
+        "        \"subtask_1/f1_micro\": f1_score(y1_true, y1_pred, average=\"micro\", zero_division=0),\n",
+        "\n",
+        "        \"subtask_2/f1_macro\": f1_score(y2_true, y2_pred, average=\"macro\", zero_division=0),\n",
+        "        \"subtask_2/f1_micro\": f1_score(y2_true, y2_pred, average=\"micro\", zero_division=0),\n",
+        "\n",
+        "        \"subtask_3/f1_macro\": f1_score(y3_true, y3_pred, average=\"macro\", zero_division=0),\n",
+        "        \"subtask_3/f1_micro\": f1_score(y3_true, y3_pred, average=\"micro\", zero_division=0),\n",
+        "    }\n",
+        "\n",
+        "# Define training arguments\n",
+        "training_args = TrainingArguments(\n",
+        "        output_dir=f\"./\",\n",
+        "        num_train_epochs=3,\n",
+        "        learning_rate=2e-5,\n",
+        "        per_device_train_batch_size=64,\n",
+        "        per_device_eval_batch_size=8,\n",
+        "        eval_strategy=\"epoch\",\n",
+        "        save_strategy=\"no\",\n",
+        "        logging_steps=100,\n",
+        "        disable_tqdm=False\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "536c287c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize the Trainer\n",
+        "trainer = Trainer(\n",
+        "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+        "    args=training_args,                  # training arguments, defined above\n",
+        "    train_dataset=train_dataset,         # training dataset\n",
+        "    eval_dataset=val_dataset,            # evaluation dataset\n",
+        "    compute_metrics=compute_metrics,     # the callback that computes metrics of interest\n",
+        "    data_collator=DataCollatorWithPadding(tokenizer) # Data collator for dynamic padding\n",
+        ")\n",
+        "\n",
+        "# Train the model\n",
+        "trainer.train()\n",
+        "\n",
+        "# Evaluate the model on the validation set\n",
+        "eval_results = trainer.evaluate()\n",
+        "print(f\"Validation Results:\\nAccuracy: {eval_results['eval_accuracy']:.4f}\\nPrecision: {eval_results['eval_precision']:.4f}\\nRecall: {eval_results['eval_recall']:.4f}\\nF1 (binary): {eval_results['eval_f1_binary']:.4f}\\nF1 (macro): {eval_results['eval_f1_macro']:.4f}\\nF1 (micro): {eval_results['eval_f1_micro']:.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2fd5f21b",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
