--- a/starter_ar.ipynb
+++ b/starter_ar.ipynb
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "5b8e9d6e-9342-43fd-9a0a-1330caf4e23a",
       "metadata": {
         "id": "5b8e9d6e-9342-43fd-9a0a-1330caf4e23a"
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "UkC2r47nManC",
       "metadata": {
         "id": "UkC2r47nManC"
@@ -304,13 +304,13 @@
         {
           "data": {
             "text/html": [
-              "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/dummy/dummy/runs/6dz5f63u?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+              "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/dummy/dummy/runs/cw6nwovv?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
             ],
             "text/plain": [
-              "<wandb.sdk.wandb_run.Run at 0x17fbb0830>"
+              "<wandb.sdk.wandb_run.Run at 0x30c22fcb0>"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "7ac2064b",
       "metadata": {},
       "outputs": [],
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "id": "e4fe8cc2-ba47-4240-bdd2-b1d3ea323134",
       "metadata": {
         "id": "e4fe8cc2-ba47-4240-bdd2-b1d3ea323134"
@@ -455,7 +455,7 @@
               "4  \"bad people\" I have some conservative values s...             0  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "id": "8e749d08",
       "metadata": {
         "id": "8e749d08"
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "id": "c2e6215b",
       "metadata": {
         "id": "c2e6215b"
@@ -551,30 +551,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 15,
-      "id": "a6a43631",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'input_ids': tensor([  101,  8680, 14712,  2011,  2035, 10643,  1012,   102]),\n",
-              " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0]),\n",
-              " 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1]),\n",
-              " 'labels': tensor(1)}"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "train_dataset.__getitem__(0)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "b13caa5c",
       "metadata": {
@@ -586,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 7,
       "id": "7cd0411f",
       "metadata": {
         "id": "7cd0411f"
@@ -618,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "21c97269",
       "metadata": {
         "id": "21c97269"
@@ -664,20 +640,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "ecd9f444",
       "metadata": {
         "id": "ecd9f444"
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n"
+          ]
+        },
+        {
           "data": {
             "text/html": [
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='102' max='102' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [102/102 01:05, Epoch 3/3]\n",
+              "      <progress value='123' max='123' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [123/123 01:43, Epoch 3/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -686,26 +670,46 @@
               "      <th>Training Loss</th>\n",
               "      <th>Validation Loss</th>\n",
               "      <th>F1 Macro</th>\n",
+              "      <th>Accuracy</th>\n",
+              "      <th>Precision</th>\n",
+              "      <th>Recall</th>\n",
+              "      <th>F1 Binary</th>\n",
+              "      <th>F1 Micro</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
               "      <td>No log</td>\n",
-              "      <td>0.492411</td>\n",
-              "      <td>0.718954</td>\n",
+              "      <td>0.487013</td>\n",
+              "      <td>0.741730</td>\n",
+              "      <td>0.748837</td>\n",
+              "      <td>0.620462</td>\n",
+              "      <td>0.800000</td>\n",
+              "      <td>0.698885</td>\n",
+              "      <td>0.748837</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
               "      <td>No log</td>\n",
-              "      <td>0.468928</td>\n",
-              "      <td>0.744665</td>\n",
+              "      <td>0.452390</td>\n",
+              "      <td>0.750708</td>\n",
+              "      <td>0.762791</td>\n",
+              "      <td>0.652985</td>\n",
+              "      <td>0.744681</td>\n",
+              "      <td>0.695825</td>\n",
+              "      <td>0.762791</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>0.439700</td>\n",
-              "      <td>0.468923</td>\n",
-              "      <td>0.738514</td>\n",
+              "      <td>0.471600</td>\n",
+              "      <td>0.454522</td>\n",
+              "      <td>0.749094</td>\n",
+              "      <td>0.764341</td>\n",
+              "      <td>0.665339</td>\n",
+              "      <td>0.710638</td>\n",
+              "      <td>0.687243</td>\n",
+              "      <td>0.764341</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
@@ -718,13 +722,25 @@
           "output_type": "display_data"
         },
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n",
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n",
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n"
+          ]
+        },
+        {
           "data": {
             "text/html": [
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='67' max='67' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [67/67 00:01]\n",
+              "      <progress value='81' max='81' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [81/81 00:02]\n",
               "    </div>\n",
               "    "
             ],
@@ -739,7 +755,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Macro F1 score on validation set: 0.7385141903793659\n"
+            "Validation Results:\n",
+            "Accuracy: 0.7643\n",
+            "Precision: 0.6653\n",
+            "Recall: 0.7106\n",
+            "F1 (binary): 0.6872\n",
+            "F1 (macro): 0.7491\n",
+            "F1 (micro): 0.7643\n"
           ]
         }
       ],
@@ -761,6 +783,14 @@
         "eval_results = trainer.evaluate()\n",
         "print(f\"Validation Results:\\nAccuracy: {eval_results['eval_accuracy']:.4f}\\nPrecision: {eval_results['eval_precision']:.4f}\\nRecall: {eval_results['eval_recall']:.4f}\\nF1 (binary): {eval_results['eval_f1_binary']:.4f}\\nF1 (macro): {eval_results['eval_f1_macro']:.4f}\\nF1 (micro): {eval_results['eval_f1_micro']:.4f}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "50b286b5",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
