fixing labels signal

--- a/MTL.ipynb
+++ b/MTL.ipynb
@@ -111,13 +111,13 @@
         "\n",
         "    # Ensure consistent tensor conversion for all items\n",
         "    item = {key: encoding[key].squeeze() for key in encoding.keys()}\n",
-        "    item['labels'] = torch.tensor(label, dtype=torch.long)\n",
+        "    item['labels'] = torch.tensor(label, dtype=torch.float)\n",
         "    return item"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "8900bea6",
       "metadata": {},
       "outputs": [],
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "500cca39",
       "metadata": {},
       "outputs": [],
@@ -193,6 +193,9 @@
         "        super().__init__()\n",
         "        self.encoder = AutoModel.from_pretrained(model_name)\n",
         "        hidden_size = self.encoder.config.hidden_size\n",
+        "\n",
+        "        self.num_types = num_types\n",
+        "        self.num_manifestations = num_manifestations\n",
         "\n",
         "        self.head1 = nn.Linear(hidden_size, 1)\n",
         "        self.head2 = nn.Linear(hidden_size, num_types)\n",
@@ -205,15 +208,14 @@
         "            token_type_ids=token_type_ids,\n",
         "        )\n",
         "\n",
-        "        H = outputs.last_hidden_state[:, 0, :]  # [CLS]\n",
+        "        H = outputs.last_hidden_state[:, 0, :]\n",
         "\n",
-        "        logits1 = self.head1(H)  # [batch, 1]\n",
-        "\n",
-        "        gate = torch.sigmoid(logits1)\n",
+        "        logits1 = self.head1(H)\n",
+        "        gate = torch.sigmoid(logits1).detach()\n",
         "        H_gated = H * gate\n",
         "\n",
-        "        logits2 = self.head2(H_gated)          # [batch, num_types]\n",
-        "        logits3 = self.head3(H_gated)          # [batch, num_manifestations]\n",
+        "        logits2 = self.head2(H_gated)\n",
+        "        logits3 = self.head3(H_gated)\n",
         "\n",
         "        logits = torch.cat([logits1, logits2, logits3], dim=-1)\n",
         "\n",
@@ -221,7 +223,16 @@
         "        if labels is not None:\n",
         "            labels = labels.float()\n",
         "            loss_fct = nn.BCEWithLogitsLoss()\n",
-        "            loss = loss_fct(logits, labels)\n",
+        "\n",
+        "            y1_true = labels[:, :1]\n",
+        "            y2_true = labels[:, 1:1 + self.num_types]\n",
+        "            y3_true = labels[:, 1 + self.num_types:]\n",
+        "\n",
+        "            loss1 = loss_fct(logits1, y1_true)\n",
+        "            loss2 = loss_fct(logits2, y2_true)\n",
+        "            loss3 = loss_fct(logits3, y3_true)\n",
+        "\n",
+        "            loss = (loss1 + loss2 + loss3) / 3.0\n",
         "\n",
         "        return {\n",
         "            \"loss\": loss,\n",
@@ -234,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "id": "902a37ff",
       "metadata": {},
       "outputs": [],
@@ -242,7 +253,11 @@
         "model = GatedMTLModel(model_name, NUM_TYPES, NUM_MANIFESTATIONS)\n",
         "\n",
         "def compute_metrics(eval_pred):\n",
-        "    logits, labels = eval_pred\n",
+        "    logits = eval_pred.predictions\n",
+        "    labels = eval_pred.label_ids\n",
+        "\n",
+        "    if isinstance(logits, tuple):\n",
+        "        logits = logits[0]\n",
         "\n",
         "    probs = 1 / (1 + np.exp(-logits))\n",
         "    preds = (probs >= 0.5).astype(int)\n",
@@ -289,7 +304,73 @@
       "execution_count": null,
       "id": "536c287c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='50' max='123' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 50/123 04:25 < 06:43, 0.18 it/s, Epoch 1.20/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "      <th>Subtask 1/accuracy</th>\n",
+              "      <th>Subtask 1/f1 Binary</th>\n",
+              "      <th>Subtask 1/f1 Macro</th>\n",
+              "      <th>Subtask 1/f1 Micro</th>\n",
+              "      <th>Subtask 2/f1 Macro</th>\n",
+              "      <th>Subtask 2/f1 Micro</th>\n",
+              "      <th>Subtask 3/f1 Macro</th>\n",
+              "      <th>Subtask 3/f1 Micro</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>0.405967</td>\n",
+              "      <td>0.364341</td>\n",
+              "      <td>0.534091</td>\n",
+              "      <td>0.267045</td>\n",
+              "      <td>0.364341</td>\n",
+              "      <td>0.006639</td>\n",
+              "      <td>0.023055</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n"
+          ]
+        }
+      ],
       "source": [
         "# Initialize the Trainer\n",
         "trainer = Trainer(\n",
