--- a/MTL_gated.ipynb
+++ b/MTL_gated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bf088005",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2508329d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "# CONFIG\n",
     "NUM_TYPES = 5\n",
     "NUM_MANIFESTATIONS = 6\n",
-    "datasets_merge = True\n",
+    "datasets_merge = False\n",
     "lang = \"eng\"\n",
     "trial_id = \"000002\"\n",
     "model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\"]\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6407ec79",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e844f3e6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "09f26488",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8900bea6",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cloudspace",
+   "display_name": "nlp",
    "language": "python",
    "name": "python3"
   },
@@ -791,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
