dspy for all tasks

--- a/MTL_gated.ipynb
+++ b/MTL_gated.ipynb
@@ -182,13 +182,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "51aeaa49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pos_weights(labels_matrix):\n",
+    "    # labels_matrix is a list of lists or numpy array\n",
+    "    labels_np = np.array(labels_matrix)\n",
+    "    num_pos = labels_np.sum(axis=0)\n",
+    "    num_neg = len(labels_np) - num_pos\n",
+    "    \n",
+    "    # Simple ratio: if 10 pos and 90 neg, weight is 9.0\n",
+    "    # Add a small epsilon to avoid division by zero\n",
+    "    weights = num_neg / (num_pos + 1e-5)\n",
+    "    return torch.tensor(weights, dtype=torch.float)\n",
+    "\n",
+    "pos_weight_2 = torch.ones([NUM_TYPES]) * 5.0  # Penalize missing a type 5x more\n",
+    "pos_weight_3 = torch.ones([NUM_MANIFESTATIONS]) * 5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "500cca39",
    "metadata": {},
    "outputs": [],
    "source": [
     "class GatedMTLModel(nn.Module):\n",
-    "    def __init__(self, model_name, num_types, num_manifestations):\n",
+    "    def __init__(self, model_name, num_types, num_manifestations, pos_weight_2=None, pos_weight_3=None):\n",
     "        super().__init__()\n",
     "        self.encoder = AutoModel.from_pretrained(model_name)\n",
     "        hidden_size = self.encoder.config.hidden_size\n",
@@ -199,6 +221,9 @@
     "        self.head1 = nn.Linear(hidden_size, 1)\n",
     "        self.head2 = nn.Linear(hidden_size, num_types)\n",
     "        self.head3 = nn.Linear(hidden_size, num_manifestations)\n",
+    "\n",
+    "        self.register_buffer(\"pos_weight_2\", pos_weight_2 if pos_weight_2 is not None else torch.tensor([]))\n",
+    "        self.register_buffer(\"pos_weight_3\", pos_weight_3 if pos_weight_3 is not None else torch.tensor([]))\n",
     "\n",
     "    def forward(self, input_ids, attention_mask=None, token_type_ids=None, labels=None):\n",
     "        outputs = self.encoder(\n",
@@ -221,15 +246,24 @@
     "        loss = None\n",
     "        if labels is not None:\n",
     "            labels = labels.float()\n",
-    "            loss_fct = nn.BCEWithLogitsLoss()\n",
     "\n",
     "            y1_true = labels[:, :1]\n",
     "            y2_true = labels[:, 1:1 + self.num_types]\n",
     "            y3_true = labels[:, 1 + self.num_types:]\n",
     "\n",
-    "            loss1 = loss_fct(logits1, y1_true)\n",
-    "            loss2 = loss_fct(logits2, y2_true)\n",
-    "            loss3 = loss_fct(logits3, y3_true)\n",
+    "            device = logits1.device\n",
+    "\n",
+    "            loss1 = nn.BCEWithLogitsLoss()(logits1, y1_true)\n",
+    "\n",
+    "            if self.pos_weight_2.numel() > 0:\n",
+    "                loss2 = nn.BCEWithLogitsLoss(pos_weight=self.pos_weight_2.to(device))(logits2, y2_true)\n",
+    "            else:\n",
+    "                loss2 = nn.BCEWithLogitsLoss()(logits2, y2_true)\n",
+    "\n",
+    "            if self.pos_weight_3.numel() > 0:\n",
+    "                loss3 = nn.BCEWithLogitsLoss(pos_weight=self.pos_weight_3.to(device))(logits3, y3_true)\n",
+    "            else:\n",
+    "                loss3 = nn.BCEWithLogitsLoss()(logits3, y3_true)\n",
     "\n",
     "            loss = (loss1 + loss2 + loss3) / 3.0\n",
     "\n",
@@ -240,6 +274,26 @@
     "            \"types_logits\": logits2,\n",
     "            \"manifestations_logits\": logits3,\n",
     "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d10f0eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_pos_weights(df, label_cols):\n",
+    "    labels = df[label_cols].values\n",
+    "    pos = labels.sum(axis=0)\n",
+    "    neg = (labels == 0).sum(axis=0)\n",
+    "    weights = torch.tensor(neg / (pos + 1e-5), dtype=torch.float)\n",
+    "    return weights\n",
+    "\n",
+    "pos_weight_2 = compute_pos_weights(train_2, train_2.columns[2:])\n",
+    "pos_weight_3 = compute_pos_weights(train_3, train_3.columns[2:])\n",
+    "\n",
+    "model = GatedMTLModel(model_name, NUM_TYPES, NUM_MANIFESTATIONS, pos_weight_2, pos_weight_3)"
    ]
   },
   {
