--- a/MTL_no_gate.ipynb
+++ b/MTL_no_gate.ipynb
@@ -34,10 +34,10 @@
     "NUM_TYPES = 5\n",
     "NUM_MANIFESTATIONS = 6\n",
     "datasets_merge = True\n",
-    "lang = \"arb\"\n",
-    "trial_id = \"0000NG2\"\n",
-    "model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\", \"FacebookAI/xlm-roberta-large\"]\n",
-    "model_name = model_names[1]"
+    "lang = \"eng\"\n",
+    "trial_id = \"0000NG3\"\n",
+    "model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\", \"FacebookAI/xlm-roberta-large\", \"0ssamaak0/roberta-base-LEGO_emotions\", \"FacebookAI/roberta-base\"]\n",
+    "model_name = model_names[-1]"
    ]
   },
   {
@@ -112,11 +112,111 @@
    "execution_count": 6,
    "id": "8900bea6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ecec2cf2369d4cc4a29ebe38f6364fc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/25.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f98a2f674b16484da699b6a2ca0edf84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/481 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "604364467c19449882fb482eac5c0c0c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/25.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f480d7923baa43dfba1c33b685824884",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fefa23f26144e4690ae5b3fb2132281",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "284c3c0f9bb849b185110a265eef5e1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "139c6636a2b44dd7b99305fe84b69ec6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/25.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "# Load the tokenizer\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, force_download=True)\n",
+    "\n",
     "\n",
     "train_datasets = []\n",
     "val_datasets = []\n",
@@ -257,7 +357,30 @@
    "execution_count": 9,
    "id": "5bb1b04b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c0063d073644d1b81680665439f7fc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/499M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at FacebookAI/roberta-base and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "def compute_pos_weights(df, label_cols):\n",
     "    labels = df[label_cols].values\n",
@@ -342,13 +465,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='935' max='1275' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 935/1275 03:08 < 01:08, 4.95 it/s, Epoch 11/15]\n",
+       "      <progress value='567' max='1215' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 567/1215 04:51 < 05:34, 1.94 it/s, Epoch 7/15]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -364,91 +495,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.892600</td>\n",
-       "      <td>0.720373</td>\n",
-       "      <td>0.795770</td>\n",
-       "      <td>0.425308</td>\n",
-       "      <td>0.536661</td>\n",
+       "      <td>0.990400</td>\n",
+       "      <td>0.810952</td>\n",
+       "      <td>0.752864</td>\n",
+       "      <td>0.242834</td>\n",
+       "      <td>0.464687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.618500</td>\n",
-       "      <td>0.624294</td>\n",
-       "      <td>0.825407</td>\n",
-       "      <td>0.557635</td>\n",
-       "      <td>0.584166</td>\n",
+       "      <td>0.741700</td>\n",
+       "      <td>0.773194</td>\n",
+       "      <td>0.777595</td>\n",
+       "      <td>0.278518</td>\n",
+       "      <td>0.481526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.507400</td>\n",
-       "      <td>0.618955</td>\n",
-       "      <td>0.820987</td>\n",
-       "      <td>0.537508</td>\n",
-       "      <td>0.573250</td>\n",
+       "      <td>0.594000</td>\n",
+       "      <td>0.734472</td>\n",
+       "      <td>0.777004</td>\n",
+       "      <td>0.321899</td>\n",
+       "      <td>0.485705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.438500</td>\n",
-       "      <td>0.615705</td>\n",
-       "      <td>0.829254</td>\n",
-       "      <td>0.583788</td>\n",
-       "      <td>0.593961</td>\n",
+       "      <td>0.469500</td>\n",
+       "      <td>0.823678</td>\n",
+       "      <td>0.782434</td>\n",
+       "      <td>0.355595</td>\n",
+       "      <td>0.489521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.380600</td>\n",
-       "      <td>0.620346</td>\n",
-       "      <td>0.829475</td>\n",
-       "      <td>0.623967</td>\n",
-       "      <td>0.591616</td>\n",
+       "      <td>0.418300</td>\n",
+       "      <td>0.910969</td>\n",
+       "      <td>0.762351</td>\n",
+       "      <td>0.329680</td>\n",
+       "      <td>0.470295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>0.335000</td>\n",
-       "      <td>0.632782</td>\n",
-       "      <td>0.831355</td>\n",
-       "      <td>0.575240</td>\n",
-       "      <td>0.576642</td>\n",
+       "      <td>0.359900</td>\n",
+       "      <td>1.094184</td>\n",
+       "      <td>0.747089</td>\n",
+       "      <td>0.330495</td>\n",
+       "      <td>0.466279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>0.323300</td>\n",
-       "      <td>0.647207</td>\n",
-       "      <td>0.829191</td>\n",
-       "      <td>0.621921</td>\n",
-       "      <td>0.593612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>0.284000</td>\n",
-       "      <td>0.647221</td>\n",
-       "      <td>0.834035</td>\n",
-       "      <td>0.633221</td>\n",
-       "      <td>0.605745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>0.255700</td>\n",
-       "      <td>0.640344</td>\n",
-       "      <td>0.829717</td>\n",
-       "      <td>0.631163</td>\n",
-       "      <td>0.613391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>0.244600</td>\n",
-       "      <td>0.677126</td>\n",
-       "      <td>0.828064</td>\n",
-       "      <td>0.634570</td>\n",
-       "      <td>0.617431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>0.228100</td>\n",
-       "      <td>0.666442</td>\n",
-       "      <td>0.832758</td>\n",
-       "      <td>0.644170</td>\n",
-       "      <td>0.616938</td>\n",
+       "      <td>0.319000</td>\n",
+       "      <td>1.311466</td>\n",
+       "      <td>0.727875</td>\n",
+       "      <td>0.327470</td>\n",
+       "      <td>0.444792</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -459,6 +558,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
     },
     {
      "data": {
@@ -475,9 +594,9 @@
      "output_type": "stream",
      "text": [
       "Validation Results: \n",
-      "subtask_1 f1_macro: 0.8340 \n",
-      "subtask_2 f1_macro: 0.6332 \n",
-      "subtask_3 f1_macro: 0.6057\n"
+      "subtask_1 f1_macro: 0.7824 \n",
+      "subtask_2 f1_macro: 0.3556 \n",
+      "subtask_3 f1_macro: 0.4895\n"
      ]
     }
    ],
@@ -516,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9b4ddef6",
    "metadata": {},
    "outputs": [
@@ -525,10 +644,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Experiment results logged to logs.json (trial_id: 0000NG2)\n",
-      "  - subtask_1: arb\n",
-      "  - subtask_2: arb\n",
-      "  - subtask_3: arb\n"
+      "✓ Experiment results logged to logs.json (trial_id: 0000NG3)\n",
+      "  - subtask_1: eng\n",
+      "  - subtask_2: eng\n",
+      "  - subtask_3: eng\n"
      ]
     }
    ],
@@ -631,27 +750,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "fe02703b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='6' max='11' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 6/11 00:00 < 00:00, 27.37 it/s]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/0ssamaak0/miniconda3/envs/nlp/lib/python3.13/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
     },
     {
      "name": "stdout",
@@ -739,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cloudspace",
+   "display_name": "nlp",
    "language": "python",
    "name": "python3"
   },
@@ -753,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
