--- a/MTL_gated.ipynb
+++ b/MTL_gated.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf088005",
+   "execution_count": 18,
+   "id": "7c8f4482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
     "# CONFIG\n",
     "NUM_TYPES = 5\n",
     "NUM_MANIFESTATIONS = 6\n",
-    "datasets_merge = False\n",
-    "lang = \"eng\"\n",
-    "trial_id = \"000002\"\n",
-    "model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\"]\n",
-    "model_name = model_names[2]"
+    "datasets_merge = True\n",
+    "lang = \"arb\"\n",
+    "trial_id = \"GT000003\"\n",
+    "model_names = ['bert-base-uncased', \"UBC-NLP/MARBERTv2\", \"microsoft/deberta-v3-base\", \"FacebookAI/xlm-roberta-large\"]\n",
+    "model_name = model_names[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6407ec79",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e844f3e6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "09f26488",
    "metadata": {},
    "outputs": [],
@@ -109,19 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8900bea6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zeus/miniconda3/envs/cloudspace/lib/python3.12/site-packages/transformers/convert_slow_tokenizer.py:566: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "# Load the tokenizer\n",
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "51aeaa49",
    "metadata": {},
    "outputs": [],
@@ -204,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "500cca39",
    "metadata": {},
    "outputs": [],
@@ -278,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d10f0eec",
    "metadata": {},
    "outputs": [],
@@ -298,39 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "902a37ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ea83ef1c5914cd5bf77fef92668b417",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/371M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "547df537625944f09e6a07a75b692d51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/371M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = GatedMTLModel(model_name, NUM_TYPES, NUM_MANIFESTATIONS)\n",
     "\n",
@@ -364,21 +326,24 @@
     "\n",
     "# Define training arguments\n",
     "training_args = TrainingArguments(\n",
-    "        output_dir=f\"./\",\n",
-    "        num_train_epochs=10,\n",
-    "        learning_rate=2e-5,\n",
-    "        per_device_train_batch_size=64,\n",
-    "        per_device_eval_batch_size=8,\n",
-    "        eval_strategy=\"epoch\",\n",
-    "        save_strategy=\"no\",\n",
-    "        logging_steps=len(train_dataset) // 64,\n",
-    "        disable_tqdm=False\n",
-    "    )"
+    "    output_dir=f\"./results/{trial_id}\",\n",
+    "    num_train_epochs=15,              # Increase max epochs, let EarlyStopping handle the cut\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=32,   # 64 might be too stable? 32 adds some noise (good for regularization)\n",
+    "    per_device_eval_batch_size=16,\n",
+    "    weight_decay=0.01,                # Add Weight Decay!\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",            # Must save to load best\n",
+    "    load_best_model_at_end=True,      # Automatically load the best checkpoint\n",
+    "    metric_for_best_model=\"eval_subtask_1/f1_macro\", # Optimize for the hardest metric or the main task\n",
+    "    save_total_limit=2,               # Don't fill disk\n",
+    "    logging_steps=50,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b392db14",
    "metadata": {},
    "outputs": [
@@ -388,8 +353,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='410' max='410' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [410/410 03:12, Epoch 10/10]\n",
+       "      <progress value='1275' max='1275' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1275/1275 04:08, Epoch 15/15]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -397,146 +362,131 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
-       "      <th>Subtask 1/accuracy</th>\n",
-       "      <th>Subtask 1/f1 Binary</th>\n",
        "      <th>Subtask 1/f1 Macro</th>\n",
-       "      <th>Subtask 1/f1 Micro</th>\n",
        "      <th>Subtask 2/f1 Macro</th>\n",
-       "      <th>Subtask 2/f1 Micro</th>\n",
        "      <th>Subtask 3/f1 Macro</th>\n",
-       "      <th>Subtask 3/f1 Micro</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.580600</td>\n",
-       "      <td>0.463416</td>\n",
-       "      <td>0.779845</td>\n",
-       "      <td>0.710204</td>\n",
-       "      <td>0.766352</td>\n",
-       "      <td>0.779845</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.594300</td>\n",
+       "      <td>0.518822</td>\n",
+       "      <td>0.791667</td>\n",
+       "      <td>0.123547</td>\n",
+       "      <td>0.365288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.448600</td>\n",
-       "      <td>0.431845</td>\n",
-       "      <td>0.787597</td>\n",
-       "      <td>0.722110</td>\n",
-       "      <td>0.775107</td>\n",
-       "      <td>0.787597</td>\n",
-       "      <td>0.140000</td>\n",
-       "      <td>0.547486</td>\n",
-       "      <td>0.188813</td>\n",
-       "      <td>0.369892</td>\n",
+       "      <td>0.477300</td>\n",
+       "      <td>0.482306</td>\n",
+       "      <td>0.806141</td>\n",
+       "      <td>0.252216</td>\n",
+       "      <td>0.394929</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.395200</td>\n",
-       "      <td>0.460585</td>\n",
-       "      <td>0.747287</td>\n",
-       "      <td>0.675944</td>\n",
-       "      <td>0.734414</td>\n",
-       "      <td>0.747287</td>\n",
-       "      <td>0.137313</td>\n",
-       "      <td>0.549488</td>\n",
-       "      <td>0.241772</td>\n",
-       "      <td>0.423529</td>\n",
+       "      <td>0.414100</td>\n",
+       "      <td>0.485054</td>\n",
+       "      <td>0.812061</td>\n",
+       "      <td>0.407962</td>\n",
+       "      <td>0.419951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.374600</td>\n",
-       "      <td>0.481673</td>\n",
-       "      <td>0.753488</td>\n",
-       "      <td>0.681363</td>\n",
-       "      <td>0.740176</td>\n",
-       "      <td>0.753488</td>\n",
-       "      <td>0.137313</td>\n",
-       "      <td>0.549488</td>\n",
-       "      <td>0.247989</td>\n",
-       "      <td>0.424188</td>\n",
+       "      <td>0.392300</td>\n",
+       "      <td>0.483305</td>\n",
+       "      <td>0.810636</td>\n",
+       "      <td>0.464676</td>\n",
+       "      <td>0.398317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.346900</td>\n",
-       "      <td>0.419000</td>\n",
-       "      <td>0.793798</td>\n",
-       "      <td>0.671605</td>\n",
-       "      <td>0.760661</td>\n",
-       "      <td>0.793798</td>\n",
-       "      <td>0.132283</td>\n",
-       "      <td>0.506024</td>\n",
-       "      <td>0.349250</td>\n",
-       "      <td>0.462701</td>\n",
+       "      <td>0.355700</td>\n",
+       "      <td>0.506537</td>\n",
+       "      <td>0.811912</td>\n",
+       "      <td>0.508022</td>\n",
+       "      <td>0.440009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>0.328200</td>\n",
-       "      <td>0.427450</td>\n",
-       "      <td>0.792248</td>\n",
-       "      <td>0.665000</td>\n",
-       "      <td>0.757219</td>\n",
-       "      <td>0.792248</td>\n",
-       "      <td>0.132984</td>\n",
-       "      <td>0.509018</td>\n",
-       "      <td>0.356120</td>\n",
-       "      <td>0.462523</td>\n",
+       "      <td>0.328700</td>\n",
+       "      <td>0.485212</td>\n",
+       "      <td>0.810651</td>\n",
+       "      <td>0.600485</td>\n",
+       "      <td>0.493419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>0.317700</td>\n",
-       "      <td>0.434216</td>\n",
-       "      <td>0.782946</td>\n",
-       "      <td>0.663462</td>\n",
-       "      <td>0.751639</td>\n",
-       "      <td>0.782946</td>\n",
-       "      <td>0.131633</td>\n",
-       "      <td>0.506876</td>\n",
-       "      <td>0.346226</td>\n",
-       "      <td>0.459165</td>\n",
+       "      <td>0.319700</td>\n",
+       "      <td>0.466207</td>\n",
+       "      <td>0.816407</td>\n",
+       "      <td>0.607583</td>\n",
+       "      <td>0.529890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>0.306000</td>\n",
-       "      <td>0.466363</td>\n",
-       "      <td>0.778295</td>\n",
-       "      <td>0.685714</td>\n",
-       "      <td>0.757228</td>\n",
-       "      <td>0.778295</td>\n",
-       "      <td>0.135198</td>\n",
-       "      <td>0.531136</td>\n",
-       "      <td>0.372141</td>\n",
-       "      <td>0.468156</td>\n",
+       "      <td>0.300900</td>\n",
+       "      <td>0.481573</td>\n",
+       "      <td>0.815085</td>\n",
+       "      <td>0.613317</td>\n",
+       "      <td>0.499693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>0.299900</td>\n",
-       "      <td>0.470431</td>\n",
-       "      <td>0.775194</td>\n",
-       "      <td>0.679912</td>\n",
-       "      <td>0.753337</td>\n",
-       "      <td>0.775194</td>\n",
-       "      <td>0.134906</td>\n",
-       "      <td>0.528651</td>\n",
-       "      <td>0.354561</td>\n",
-       "      <td>0.448306</td>\n",
+       "      <td>0.289700</td>\n",
+       "      <td>0.467355</td>\n",
+       "      <td>0.807677</td>\n",
+       "      <td>0.606452</td>\n",
+       "      <td>0.481354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.296700</td>\n",
-       "      <td>0.478152</td>\n",
-       "      <td>0.775194</td>\n",
-       "      <td>0.681319</td>\n",
-       "      <td>0.753833</td>\n",
-       "      <td>0.775194</td>\n",
-       "      <td>0.140043</td>\n",
-       "      <td>0.526316</td>\n",
-       "      <td>0.354242</td>\n",
-       "      <td>0.444255</td>\n",
+       "      <td>0.280900</td>\n",
+       "      <td>0.473079</td>\n",
+       "      <td>0.810644</td>\n",
+       "      <td>0.613314</td>\n",
+       "      <td>0.498292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>0.275600</td>\n",
+       "      <td>0.474289</td>\n",
+       "      <td>0.810644</td>\n",
+       "      <td>0.620514</td>\n",
+       "      <td>0.511879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>0.267200</td>\n",
+       "      <td>0.475026</td>\n",
+       "      <td>0.813603</td>\n",
+       "      <td>0.608784</td>\n",
+       "      <td>0.478484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>0.262400</td>\n",
+       "      <td>0.477904</td>\n",
+       "      <td>0.809168</td>\n",
+       "      <td>0.615466</td>\n",
+       "      <td>0.483110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>0.260600</td>\n",
+       "      <td>0.476574</td>\n",
+       "      <td>0.809171</td>\n",
+       "      <td>0.609192</td>\n",
+       "      <td>0.492644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>0.258800</td>\n",
+       "      <td>0.479691</td>\n",
+       "      <td>0.810649</td>\n",
+       "      <td>0.611120</td>\n",
+       "      <td>0.493782</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -563,14 +513,9 @@
      "output_type": "stream",
      "text": [
       "Validation Results: \n",
-      "subtask_1 accuracy: 0.7752 \n",
-      "subtask_1 f1_binary: 0.6813 \n",
-      "subtask_1 f1_macro: 0.7538 \n",
-      "subtask_1 f1_micro: 0.7752 \n",
-      "subtask_2 f1_macro: 0.1400 \n",
-      "subtask_2 f1_micro: 0.5263 \n",
-      "subtask_3 f1_macro: 0.3542 \n",
-      "subtask_3 f1_micro: 0.4443\n"
+      "subtask_1 f1_macro: 0.8164 \n",
+      "subtask_2 f1_macro: 0.6076 \n",
+      "subtask_3 f1_macro: 0.5299\n"
      ]
     }
    ],
@@ -608,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "9b4ddef6",
    "metadata": {},
    "outputs": [
@@ -617,10 +562,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Experiment results logged to logs.json (trial_id: 000002)\n",
-      "  - subtask_1: eng\n",
-      "  - subtask_2: eng\n",
-      "  - subtask_3: eng\n"
+      "✓ Experiment results logged to logs.json (trial_id: GT000003)\n",
+      "  - subtask_1: arb\n",
+      "  - subtask_2: arb\n",
+      "  - subtask_3: arb\n"
      ]
     }
    ],
@@ -746,10 +691,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "fe02703b",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -821,7 +776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "cloudspace",
    "language": "python",
    "name": "python3"
   },
@@ -835,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
