--- a/EDA_ar.ipynb
+++ b/EDA_ar.ipynb
@@ -26172,7 +26172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "de5ffad6",
    "metadata": {},
    "outputs": [
@@ -28320,30 +28320,36 @@
     "aldi_grid = np.linspace(X.min(), X.max(), 100).reshape(-1, 1)\n",
     "probs = clf.predict_proba(aldi_grid)[:, 1]\n",
     "\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(16, 5))\n",
+    "# Histogram of ALDi scores\n",
+    "fig1, ax1 = plt.subplots(figsize=(6, 4))\n",
+    "ax1.hist(train_df_1[\"ALDi_score\"], bins=30, color=\"skyblue\", edgecolor=\"black\")\n",
+    "ax1.set_title(\"Histogram of ALDi Scores\")\n",
+    "ax1.set_xlabel(\"ALDi_score\")\n",
+    "ax1.set_ylabel(\"Frequency\")\n",
+    "fig1.tight_layout()\n",
+    "fig1.savefig(\"../ACL/figures/aldi_histogram.pdf\")\n",
+    "plt.show()\n",
     "\n",
-    "# New first fig: Histogram of ALDi scores\n",
-    "axes[0].hist(train_df_1[\"ALDi_score\"], bins=30, color=\"skyblue\", edgecolor=\"black\")\n",
-    "axes[0].set_title(\"Histogram of ALDi Scores\")\n",
-    "axes[0].set_xlabel(\"ALDi_score\")\n",
-    "axes[0].set_ylabel(\"Frequency\")\n",
-    "\n",
-    "# Second fig: Boxplot as in @file_context_0\n",
-    "train_df_1.boxplot(column=\"ALDi_score\", by=\"polarization\", ax=axes[1])\n",
-    "axes[1].set_title(\"ALDi_score by polarization\")\n",
-    "axes[1].set_xlabel(\"polarization\")\n",
-    "axes[1].set_ylabel(\"ALDi_score\")\n",
+    "# Boxplot of ALDi_score by polarization\n",
+    "fig2, ax2 = plt.subplots(figsize=(6, 4))\n",
+    "train_df_1.boxplot(column=\"ALDi_score\", by=\"polarization\", ax=ax2)\n",
+    "ax2.set_title(\"ALDi_score by polarization\")\n",
+    "ax2.set_xlabel(\"polarization\")\n",
+    "ax2.set_ylabel(\"ALDi_score\")\n",
     "plt.suptitle(\"\")\n",
+    "fig2.tight_layout()\n",
+    "fig2.savefig(\"../ACL/figures/aldi_boxplot.pdf\")\n",
+    "plt.show()\n",
     "\n",
-    "# Third fig: Logistic regression probability curve\n",
-    "axes[2].plot(aldi_grid, probs)\n",
-    "axes[2].set_xlabel(\"ALDi_score\")\n",
-    "axes[2].set_ylabel(\"P(polarization = 1)\")\n",
-    "axes[2].set_title(\"ALDi Scores and Polarization\")\n",
-    "axes[2].set_ylim(0, 1)\n",
-    "\n",
-    "plt.savefig(\"../ACL/figures/aldi_logistic_regression.pdf\")\n",
-    "plt.tight_layout()\n",
+    "# Logistic regression probability curve\n",
+    "fig3, ax3 = plt.subplots(figsize=(6, 4))\n",
+    "ax3.plot(aldi_grid, probs)\n",
+    "ax3.set_xlabel(\"ALDi_score\")\n",
+    "ax3.set_ylabel(\"P(polarization = 1)\")\n",
+    "ax3.set_title(\"ALDi Scores and Polarization\")\n",
+    "ax3.set_ylim(0, 1)\n",
+    "fig3.tight_layout()\n",
+    "fig3.savefig(\"../ACL/figures/aldi_logistic_regression.pdf\")\n",
     "plt.show()"
    ]
   },
